--- a/frontend/src/components/auth/LoginForm.css
+++ b/frontend/src/components/auth/LoginForm.css
@@ -153,5 +153,7 @@ div.login-signup {
 
     body {
         margin: 0;
+        z-index: -1;
+        position: relative;
     }
 }
